<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="4dp"
    android:layout_margin="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imageOffre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/title_text_color2"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textPrix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prix"
        android:textSize="16sp"
        android:textColor="@color/price_text_color"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp"
        android:textColor="@color/description_text_color"
        android:layout_marginTop="4dp" />

</LinearLayout>